(fix): Jumping scrollbar issue
- make it always take space

--- a/src/reset.css
+++ b/src/reset.css
@@ -11,6 +11,8 @@ html {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    overflow-y: scroll;
 }
 
 img, picture, video, canvas, svg {
